# ogl_tut

./: .gitignore  CMakeLists.txt  shader.frag  shader.vert
assets/: shader.frag  shader.vert
assets/shaders/: fragment.glsl  vertex.glsl
include/: buffer_layout.hpp  camera.hpp  debug.hpp  index_buffer.hpp  program.hpp  renderer.hpp  texture2d.hpp  texture_manager.hpp  utils.hpp  vertex_array.hpp
includes/: program.hpp  utils.hpp  vertex_buffer.hpp
src/: buffer_layout.cpp  camera.cpp  debug.cpp  index_buffer.cpp  main.cpp  program.cpp  renderer.cpp  texture2d.cpp  texture_manager.cpp  utils.cpp  vertex_array.cpp  vertex_buffer.cpp
